Implantação de Categorias (Usuário, Curso e Livro) para a Adição da Documentação de Swagger e Solução de erros persistentes no projeto
