# src/controller/CategoriaLivroController.ts
@@ -1,18 +1,22 @@
 import { CategoriaLivroService } from "../service/CategoriaLivroService";
-import { Request, Response } from "express";
+import { Body, Controller, Delete, Get, Path, Post, Put, Query, Res, Route, Tags, TsoaResponse  } from "tsoa";
+import { BasicResponseDto } from "../model/dto/BasicResponseDto";
 
-export class CategoriaLivroController{
-    private categoriaLivroService = new CategoriaLivroService();
+@Route("categoria-livros")
+@Tags("Categoria de Livro")
+export class CategoriaLivroController extends Controller{
+    categoriaLivroService = new CategoriaLivroService();
 
-    async listarCategoriaLivro(req: Request, res: Response){
+    @Get()
+    async listarCategoriaLivro(
+        @Res() fail: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void>{
         try{
             const lista = await this.categoriaLivroService.listarCategoriaLivro();
-            res.status(200).json(lista);
-        } catch(err){
-            const message = err instanceof Error ? err.message: 'Não foi possivel listar as categorias de livros!';
-            res.status(400).json({
-                message: message
-            })
+            return success(200, new BasicResponseDto("Categorias de Livro Disponiveis", lista));
+        } catch(err: any){
+            return fail(400, new BasicResponseDto(err.message, undefined));
         }
     }
 }
